@@ -4,6 +4,9 @@ The format is based on [Keep a Changelog](http://keepachangelog.com/).
 
 ## [Unreleased]
 
+### Changed
+- Adjust .travis.yml options
+
 ## [v0.0.9] - Thu, 26 Apr 2018 15:22:57 +0900
 
 ### Changed
